add image (task4)

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,3 +1,10 @@
 .site-menu__item{
  list-style: none;
 }
+.background-image{
+  background-image: url('./../../img/cat.jpeg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size:cover;
+}
