add styles to every page

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,7 @@
 @import "normalize.scss";
 @import "variables.scss";
 @import "font.scss";
-@import "blocks/main.scss";
+@import "blocks/index.scss";
+@import "blocks/browser.scss";
+@import "blocks/frontend.scss";
+@import "blocks/library.scss";
