--- a/source/sass/blocks/browser.scss
+++ b/source/sass/blocks/browser.scss
@@ -1,7 +1,21 @@
+.browser__button{
+  width: 100%;
+  height: 50px;
+  margin: 20px 0;
+  background-color: #fff;
+  color: $black;
+  border: none;
+  cursor: pointer;
+}
+th{
+  border:none;
+}
 tr{
   height: 10px;
   border:none;
 }
 table{
+  margin: 20px;
   empty-cells: hide;
+  text-align: center;
 }
