--- a/source/sass/blocks/browser.scss
+++ b/source/sass/blocks/browser.scss
@@ -2,20 +2,36 @@
   width: 100%;
   height: 50px;
   margin: 20px 0;
-  background-color: #fff;
+  background-color: $white;
   color: $black;
   border: none;
   cursor: pointer;
 }
-th{
+.browser__table{
+  margin: 20px;
+}
+th,td{
   border:none;
+  text-align: center;
+  padding: 5px;
 }
 tr{
   height: 10px;
   border:none;
 }
 table{
-  margin: 20px;
+  border:none;
   empty-cells: hide;
   text-align: center;
+}
+tbody tr:nth-child(odd) {
+  background-color: $white;
+}
+
+tbody tr:nth-child(even) {
+  background-color: $background;
+}
+
+thead th, tfoot th, tfoot td {
+  background: linear-gradient(to bottom, $white, $background);
 }
