add url to background

--- a/source/sass/blocks/frontend.scss
+++ b/source/sass/blocks/frontend.scss
@@ -1,5 +1,5 @@
 .background-image{
-  background-image: url('./../../img/cat.jpeg');
+  background-image: url('../img/cat.jpeg');
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
